@startuml Website Monitor System - Updated with GRASP

class User {
    - userId: String
    - username: String
    - email: String
    - phoneNumber: String
    
    + register(): void
    + login(): void
    + getContactInfo(): String
}

class Website {
    - websiteId: String
    - url: String
    - lastChecked: Date
    - lastModified: Date
    
    + checkForUpdates(): boolean
    + getContent(): String
}

class Subscription {
    - subscriptionId: String
    - frequency: int
    - communicationChannel: String
    - isActive: boolean
    - createdDate: Date
    
    + modify(): void
    + cancel(): void
    + activate(): void
    + getPreferences(): String
}

class WebsiteController {
    + createSubscription(): void
    + modifySubscription(): void
    + cancelSubscription(): void
    + handleUserRequest(): void
    + manageSubscriptions(): void
}

class NotificationService {
    + generateNotification(): Notification
    + sendNotification(): void
    + scheduleCheck(): void
}

class Notification {
    - notificationId: String
    - message: String
    - timestamp: Date
    - status: String
    
    + send(): void
}

class MonitoringSystem {
    + periodicCheck(): void
    + processUpdates(): void
}

' Updated Relationships with Controller
User --> WebsiteController : requests
WebsiteController --> Subscription : manages
WebsiteController --> User : coordinates
Subscription }o--|| Website : monitors
NotificationService ..> Notification : creates
MonitoringSystem --> Website : checks
MonitoringSystem --> NotificationService : uses
MonitoringSystem --> WebsiteController : reports to
User <-- Notification : receives

@enduml